--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -1126,3 +1126,39 @@ text-align: center;
 }
 
 }
+
+#loading{
+  width:100%;
+  position:fixed;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;    
+  /* background-color: rgba(128,128,128,0.7); */
+  background-color: #002A48;
+  z-index:9999;
+  display: block; 
+ }
+
+ #loading::after {
+  content:'';
+  display:block;
+  position:absolute;
+  left:48%;top:40%;
+  width:80px;height:80px;
+  margin: auto;
+  border: 4px solid transparent;
+  border-top-color: #D3EAFF ;
+  border-radius: 50%;
+  animation: button-loading-spinner 1s ease infinite;
+}
+
+@keyframes button-loading-spinner {
+  from {
+    transform: rotate(0turn);
+  }
+
+  to {
+    transform: rotate(1turn);
+  }
+}
